--- a/linkedtemplates/configdnsint.json
+++ b/linkedtemplates/configdnsint.json
@@ -50,16 +50,10 @@
                 "description": "Exchange Server1 IP"
             }
         },                        
-        "icaIP": {
+        "Server1IP": {
             "type": "string",
             "metadata": {
                 "description": "Issuing CA IP"
-            }
-        },                        
-        "ocspIP": {
-            "type": "string",
-            "metadata": {
-                "description": "OCSP IP"
             }
         },                                               
         "location": {
@@ -119,8 +113,7 @@
                             "ReverseLookup1": "[parameters('ReverseLookup1')]",
                             "ForwardLookup1": "[parameters('ForwardLookup1')]",                            
                             "dc1lastoctet": "[parameters('dc1lastoctet')]",
-                            "icaIP": "[parameters('icaIP')]",                                                        
-                            "ocspIP": "[parameters('ocspIP')]",                                                                                                                              
+                            "icaIP": "[parameters('Server1IP')]",                                                                                                                            
                             "ex1IP": "[parameters('ex1IP')]",                            
                             "AdminCreds": {
                                 "UserName": "[parameters('adminUsername')]",
