--- a/linkedtemplates/configdnsint.json
+++ b/linkedtemplates/configdnsint.json
@@ -113,7 +113,7 @@
                             "ReverseLookup1": "[parameters('ReverseLookup1')]",
                             "ForwardLookup1": "[parameters('ForwardLookup1')]",                            
                             "dc1lastoctet": "[parameters('dc1lastoctet')]",
-                            "icaIP": "[parameters('Server1IP')]",                                                                                                                            
+                            "Server1IP": "[parameters('Server1IP')]",                                                                                                                            
                             "ex1IP": "[parameters('ex1IP')]",                            
                             "AdminCreds": {
                                 "UserName": "[parameters('adminUsername')]",
